--- a/Assignment-2/code/my-app/src/index.css
+++ b/Assignment-2/code/my-app/src/index.css
@@ -5,9 +5,48 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} 
+
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 25%;
+  height: 80vh;
+  border: 3px solid #e2c8ec;
+  margin-top: 15px;
+  box-shadow: -11px -10px #e2c8ec;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+}
+img {
+  width: 155px;
+  height: 160px;
+  margin: auto;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+.name {
+  color: skyblue;
+  margin-left: 10px;
+  font-size: 50px;
+  margin-bottom: 0px;
+}
+.innercard {
+  margin-left: 15px;
+}
+p{
+  color: lightgrey;
+  margin-bottom: 0px;
+}
+.innercard h1 {
+  margin-top: 0px;
 }
